--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,12 @@
-.App {
-  text-align: center;
+.img1{
+    height:30vh;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.c1{
+    border-radius: 10px;
+    border: 1px solid rgb(134, 129, 129) ;
+    box-shadow: 10px 20px 20px rgb(126, 123, 123);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.m_img_1{
+    height:40vh;
+    width: 100%;
 }
